# pubby-disco-rust

./: .env  .gitignore  Cargo.toml  dev  dev.sh  docker-compose.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  main.rs
crates/domain/: Cargo.toml
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/infra/src/bcrypt/: mod.rs  password_hash.rs
crates/infra/src/sqlx/: mod.rs
crates/infra/src/sqlx/activity/: activity_repository.rs  mod.rs
crates/infra/src/sqlx/album/: album_repository.rs  mod.rs
crates/infra/src/sqlx/artist/: artist_repository.rs  mod.rs
crates/infra/src/sqlx/genre/: genre_repository.rs  mod.rs
crates/infra/src/sqlx/media/: media_repository.rs  mod.rs
crates/infra/src/sqlx/source/: mod.rs  source_repository.rs
crates/infra/src/sqlx/user/: mod.rs  user_repository.rs
crates/infra/src/sqlx/util/: filter_macro.rs  many_to_many.rs  mod.rs
crates/ports/src/: password_hash.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  paged.rs  util.rs
crates/web/: Cargo.toml
crates/web/src/: app_state.rs  di.rs  main.rs  page.rs  utils.rs
crates/web/src/activity/: controller.rs  error.rs  presenters.rs
crates/web/src/album/: dto.rs  error.rs  presenter.rs
crates/web/src/album/controller/: contribute.rs  mod.rs
crates/web/src/artist/: dto.rs  error.rs  presenter.rs
crates/web/src/artist/controller/: contribute.rs  mod.rs
crates/web/src/genre/: dto.rs  error.rs  mod.rs  presenter.rs
crates/web/src/genre/controller/: contribute.rs  mod.rs
crates/web/src/media/: dto.rs  error.rs  mod.rs  presenter.rs
crates/web/src/media/controller/: contribute.rs  mod.rs
crates/web/src/source/: dto.rs  error.rs
crates/web/src/source/controller/: contribute.rs  mod.rs
crates/web/src/user/: controller.rs  dto.rs  errors.rs  presenters.rs
macros/entity/: Cargo.toml
macros/entity/src/: lib.rs
migrations/: 20240702212554_initdb.down.sql  20240702212554_initdb.up.sql  20240702212554_user.down.sql  20240702212554_user.up.sql  20240702212555_user_seed.up.sql  20240930223059_activity.down.sql  20240930223059_activity.up.sql  20241002235408_genre.down.sql  20241002235408_genre.up.sql  20241002235409_genre_seed.down.sql  20241002235409_genre_seed.up.sql  20241105010025_artist.down.sql  20241105010025_artist.up.sql  20241105010026_artist_seed.down.sql  20241105010026_artist_seed.up.sql  20241107232437_album.down.sql  20241107232437_album.up.sql  20241107232438_album_seed.down.sql  20241107232438_album_seed.up.sql  20241107232439_media.down.sql  20241107232439_media.up.sql  20241107232440_media_seed.down.sql  20241107232440_media_seed.up.sql  20241107232441_source.down.sql  20241107232441_source.up.sql  20241107232442_source_seed.down.sql  20241107232442_source_seed.up.sql
requests/: index.http
requests/activity/: approve_activity.http  create_activity.http  reject_activity.http
requests/album/: find_by_slug.http
requests/artist/: find_all.http  find_by_slug.http
requests/genre/: find_all_genre.http  get_genre_by_slug.http
requests/users/: login.http  login_curator.http  me.http  register.http
src/: di.rs  lib.rs  main.rs
src/domain/: mod.rs
src/domain/activity/: dto.rs  error.rs  (+3 more)
src/infra/: mod.rs  user_repository.rs
src/shared/: mod.rs
src/users/: controllers.rs  dto.rs  mod.rs  repository.rs
swagger-ui/: index.html  openapi.yaml
(+158 files in other folders)
