[workspace]

members = ["packages/api", "packages/domain-proc-macros"]
resolver = "2"
default-members = ["packages/api"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
chrono = { version = "0.4.38", features = [
  "alloc",
  "std",
  "clock",
  "now",
  "serde",
] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
tokio = { version = "1.41.0", features = [
  "rt-multi-thread",
  "macros",
  "test-util",
] }
uuid = { version = "1.11.0", features = ["v4"] }
