[workspace]
resolver = "2"
default-members = ["crates/web"]
members = [
  "macros/entity",
  "crates/domain",
  "crates/config",
  "crates/application",
  "crates/infra",
  "crates/web",
  "crates/shared",
  "crates/ports",
]

[workspace.dependencies]
chrono = { version = "0.4.38", features = [
  "alloc",
  "std",
  "clock",
  "now",
  "serde",
] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
tokio = { version = "1.41.0", features = [
  "rt-multi-thread",
  "macros",
  "test-util",
] }
uuid = { version = "1.11.0", features = ["v4"] }
env_logger = "0.11.5"
log = "0.4.22"
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio",
  "chrono",
  "uuid",
  "postgres",
  "macros",
  "tls-native-tls",
  "json",
] }
validator = { version = "0.19.0", features = ["derive"] }
futures = "0.3.31"
