[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
ports = { path = "../ports" }
shared = { path = "../shared" }
domain = { path = "../domain" }
application = { path = "../application" }
